Added AuidtListener for auto population of created and updated date columns

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,24 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#Below link is for using auditlistenere for auto created and update values.
+#https://www.callicoder.com/spring-boot-jpa-hibernate-postgresql-restful-crud-api-example/
